<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('lab_samples', function (Blueprint $table) {
            $table->id();
            $table->foreignId('lab_request_id')->constrained('lab_requests')->onDelete('cascade');
            $table->string('barcode');
            $table->string('sample_type');
            $table->foreignId('collected_by')->nullable()->constrained('users')->onDelete('set null');
            $table->enum('status', ['COLLECTED', 'REJECTED_HEMOLYSIS', 'ANALYZING', 'DISCARDED'])->default('COLLECTED');
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('lab_samples');
    }
};
